# nanda-index

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  gunicorn.conf.py  pyproject.toml  registry.py  requirements.txt  run_registry.py
agntcy-interop/: AGENTFACTS_INTEROP.md  EXPORT_TO_AGNTCY_DIR.md  LOCAL_DEVELOPMENT.md  README.md  __init__.py  agentfacts_adapter.py  docker-compose.yml  export_nanda_to_agntcy.py  requirements.txt  sync_agntcy_dir.py
agntcy-interop/adapters/: agentfacts_adapter.py
agntcy-interop/batch/: export_nanda_to_agntcy.py
agntcy-interop/docs/: ENVIRONMENT_SETUP.md  SYNC_AGNTCY_DIR.md  TESTING.md
agntcy-interop/scripts/: create_venv.sh
agntcy-interop/taxonomies/: README.md  space_skills_taxonomy.json
agntcy-interop/tests/: test_agentfacts_adapter.py  test_export_mapping.py  test_registry.py  test_registry_mongo.py  test_registry_mongo_extended.py  test_registry_new_endpoints.py  test_skill_mapping.py
deploy/docker/: README.md  docker-compose.yaml
federation/: __init__.py  federation_routes.py
federation/adapters/: __init__.py  agntcy_adapter.py
federation/tests/: test_end_to_end.py  test_integration.py
federation/tests/utils/: vision-agent.json
switchboard/: README.md  switchboard_routes.py
switchboard/adapters/: base_adapter.py  registry_adapter.py
switchboard/tests/: test_end_to_end.py  test_integration.py
switchboard/tests/utils/: image-agent.json
