[project]
name = "nanda-index-federation"
version = "0.1.0"
description = "NANDA Registry with Federation and AGNTCY Interoperability"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-auth>=2.42.1",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "pymongo>=4.15.3",
    "requests>=2.32.5",
    "agntcy-dir>=0.4.0",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"
